--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mysql/xdevapi": "8.0.13",
     "bootstrap": "4.2.1",
     "chalk": "2.4.1",
     "debug": "4.1.1",
@@ -20,6 +21,7 @@
     "font-awesome": "4.7.0",
     "jquery": "3.3.1",
     "morgan": "1.9.1",
+    "mysql": "2.16.0",
     "nodemon": "1.18.9",
     "popper.js": "1.14.6",
     "pug": "2.0.3",
