--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "set DEBUG=app & nodemon app.js",
+    "start": "set DEBUG=app,app:* & nodemon app.js",
     "lint": "node_modules\\.bin\\eslint app.js",
     "lint-fix": "node_modules\\.bin\\eslint app.js --fix"
   },
@@ -20,6 +20,7 @@
     "express": "4.16.4",
     "font-awesome": "4.7.0",
     "jquery": "3.3.1",
+    "mongodb": "3.1.10",
     "morgan": "1.9.1",
     "mysql": "2.16.0",
     "nodemon": "1.18.9",
