--- a/package.json
+++ b/package.json
@@ -13,17 +13,22 @@
   "license": "ISC",
   "dependencies": {
     "@mysql/xdevapi": "8.0.13",
+    "body-parser": "1.18.3",
     "bootstrap": "4.2.1",
     "chalk": "2.4.1",
+    "cookie-parser": "1.4.3",
     "debug": "4.1.1",
     "ejs": "2.6.1",
     "express": "4.16.4",
+    "express-session": "1.15.6",
     "font-awesome": "4.7.0",
     "jquery": "3.3.1",
     "mongodb": "3.1.10",
     "morgan": "1.9.1",
     "mysql": "2.16.0",
     "nodemon": "1.18.9",
+    "passport": "0.4.0",
+    "passport-local": "1.0.0",
     "popper.js": "1.14.6",
     "pug": "2.0.3",
     "ramda": "0.26.1"
