--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@mysql/xdevapi": "8.0.13",
+    "axios": "0.18.0",
     "body-parser": "1.18.3",
     "bootstrap": "4.2.1",
     "chalk": "2.4.1",
@@ -31,7 +32,8 @@
     "passport-local": "1.0.0",
     "popper.js": "1.14.6",
     "pug": "2.0.3",
-    "ramda": "0.26.1"
+    "ramda": "0.26.1",
+    "xml2js": "0.4.19"
   },
   "devDependencies": {
     "eslint": "5.11.1",
